feat: add delta-about.html

--- a/delta-about.html
+++ b/delta-about.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <header>
-            <h1> hola soy delta<>
+            <h1> hola soy delta</h1>
         </header>
     </main>
 </body>
