Actualizado echo-about.html con nuevos cambios

--- a/echo-about.html
+++ b/echo-about.html
@@ -6,6 +6,6 @@
     <title>Soy Echo</title>
 </head>
 <body>
-    <h1>Hola soy tu-alias</h1>      
+    <h1>Hola soy echo</h1>      
 </body>
 </html>
